[project]
name = "composable"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "omegaconf>=2.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
    "typer>=0.21.0",
    "jinja2>=3.1.6",
    "packaging>=25.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "pre-commit>=4.4.0",
    "rich>=14.2.0",
]
lint = [
    "pyright>=1.1.407",
    "ruff>=0.14.4",
]
test = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
composable = "composable:app"
cpose = "composable:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
include = ["src/**/*.py"]
exclude = ["**/tests/**", "**/test_*.py"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false

[tool.ruff]
line-length = 88
show-fixes = true
include = ["src/**/*.py", "tests/**/*.py", "pyproject.toml"]

[tool.ruff.lint]
preview = true
select = [
    "A",
    "COM",
    "DOC",
    "DTZ",
    "E",   # pycodestyle
    "F",   # Pyflakes
    "FBT",
    "G",
    "I",   # isort
    "ISC",
    "LOG",
    "PIE",
    "PL",  # Pylint
    "PT",
    "PTH",
    "RET",
    "S",
    "SIM",
    "T20",
    "T201", # Print Statement
    "TID",
    "UP",  # pyupgrade
    "W",   # pycodestyle
]
ignore = [
    "COM812",
    "E111", # Indentation issues with lint/format conflict
    "E501", # Ruff format takes care of line-too-long
    "PLC1901", # Issues with PySpark mismatched types in some cases
    "PLR2004", # Literal interpretation
    "PLR6301", # This rule does not work well with inheritance
    "T201",  # Print Statement
    "TID252", # Allow relative imports
    "UP047", # Allow TypeVar usage
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pylint]
max-args = 20
max-statements = 100

[tool.ruff.lint.per-file-ignores]
"**/test**" = ["S", "DOC", "PLC0415", "PLC2701", "PLR6301"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"src".msg = "Do not use src imports. Imports are relative to the src directory and should not include the 'src.' prefix."
